# rtac_display

./: CMakeLists.txt  README.md
cmake/: Config.cmake.in
docs/: Doxyfile
include/optix_helpers/display/: ImageRenderer.h  ImageView.h  PointCloudRenderer.h
include/rtac_display/: Color.h  Colormap.h  Display.h  DisplayServer.h  DrawingSurface.h  EventHandler.h  GLContext.h  GLFWContext.h  GLFormat.h  GLFrameBuffer.h  GLMappedPointer.h  GLMesh.h  GLReductor.h  GLRenderBuffer.h  GLSLType.h  GLState.h  GLStateMap.h  GLTexture.h  GLVector.h  Handle.h  ImageRenderer.h  ImageView.h  MeshRenderer.h  NormalsRenderer.h  ObjLoader.h  OrthoView.h  PinholeView.h  PlotData2D.h  PointCloudRenderer.h  Renderer.h  Scaling.h  View.h  View3D.h  common.h  utils.h
include/rtac_display/colormaps/: Gray.h  Viridis.h
include/rtac_display/cuda/: utils.h
include/rtac_display/renderers/: FanRenderer.h  Frame.h  FrameInstances.h  ImageRenderer.h  MeshRenderer.h  NormalsRenderer.h  PointCloudRenderer.h  Renderer.h  Scatter2D.h  SimplePlot.h  SimplePlot2D.h  TexturedMeshRenderer.h
include/rtac_display/samples/: Display3D.h  ImageDisplay.h  OrbitControls.h  PauseHandler.h
include/rtac_display/text/: FontFace.h  Glyph.h  TextRenderer.h  freetype.h
include/rtac_display/views/: ImageView.h  OrthoView.h  PinholeView.h  PlotView2D.h  View.h  View3D.h
src/: Colormap.cpp  Display.cpp  DisplayServer.cpp  DrawingSurface.cpp  EventHandler.cpp  GLFrameBuffer.cpp  GLMesh.cpp  GLReductor.cpp  GLRenderBuffer.cpp  GLState.cpp  GLTexture.cpp  ImageRenderer.cpp  ImageView.cpp  ObjLoader.cpp  PlotData2D.cpp  PointCloudRenderer.cpp  Scaling.cpp  utils.cpp
src/cuda/: utils.cu
src/renderers/: FanRenderer.cpp  Frame.cpp  FrameInstances.cpp  ImageRenderer.cpp  MeshRenderer.cpp  NormalsRenderer.cpp  PointCloudRenderer.cpp  Renderer.cpp  Scatter2D.cpp  SimplePlot.cpp  SimplePlot2D.cpp
src/samples/: Display3D.cpp  ImageDisplay.cpp  OrbitControls.cpp
src/text/: FontFace.cpp  Glyph.cpp  TextRenderer.cpp  freetype.cpp
src/views/: ImageView.cpp  OrthoView.cpp  PinholeView.cpp  PlotView2D.cpp  View.cpp  View3D.cpp
tests/: CMakeLists.txt
tests/freetype_test/: CMakeLists.txt
tests/freetype_test/src/: main.cpp
tests/reductions/: CMakeLists.txt
tests/reductions/src/: main.cpp  reductions.cpp  reductions.cu  reductions.h
tests/src/: animation_test.cpp  autoscale.cpp  base_test.cpp  display_server.cpp  dual_window.cpp  fan_renderer.cpp  fan_renderer2.cu  gl_mesh_test.cpp  glfwinput_test.cpp  glsl_types.cpp  glvector_test.cpp  imagedisplay_test.cpp  instances_renderer.cpp  mesh_test.cpp  normals_test.cpp  obj_loader.cpp  png_codec.cpp  pointcloud_test.cpp  scatter2d.cpp  simple_plot.cpp  simple_plot_2d.cpp  state_mirror.cpp  texture_test.cpp  texturedmesh_test.cpp  userinput_test.cpp  view_test.cpp
